Fix: author element positioning and spacing

--- a/dev-life-ghost-theme/src/assets/css/icons.scss
+++ b/dev-life-ghost-theme/src/assets/css/icons.scss
@@ -60,3 +60,7 @@ This forces browsers to download the new font file.
 .icon-bar-chart:before {
   content: "\f080";
 }
+
+.icon-link:before {
+  content: "\f0c1";
+}
